MET-6550 Cleanup